# zap-py

./: README.md  pyproject.toml  zap.capnp  zap.zap
.github/workflows/: docs.yml
docs/: .gitignore  next.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
docs/app/: layout.tsx  page.tsx
docs/app/docs/: layout.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/content/docs/: client-api.mdx  consensus.mdx  crypto.mdx  identity.mdx  index.mdx  installation.mdx  meta.json  quickstart.mdx  server-api.mdx  types.mdx
docs/content/docs/examples/: async-examples.mdx  decorator-patterns.mdx  meta.json
docs/src/app/: globals.css  layout.tsx  page.tsx
docs/src/components/: CodeBlock.tsx  Content.tsx  Hero.tsx  Sidebar.tsx  index.ts
src/zap/: __init__.py  app.py  client.py  consensus.py  crypto.py  identity.py  types.py
tests/: test_app.py
