[project]
name = "zap-protocol"
version = "0.2.1"
description = "ZAP - Zero-Copy App Proto for Python"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ZAP Protocol", email = "dev@zap.dev" }]
requires-python = ">=3.10"
keywords = ["capnproto", "rpc", "agents", "mcp", "ai", "zap"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pycapnp>=2.0.0",
    "pydantic>=2.0",
    "httpx>=0.25",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://zap.dev"
Repository = "https://github.com/zap-protocol/zap-py"
Documentation = "https://zap.dev/docs/python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zap"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
